added sitemap and meta description

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,11 +75,12 @@ p.card-text{
 
 
 {% block title %}
-    Corporate Diversity Data
+    Corporate Diversity Data & Reports
 {% endblock %}
 
 
 {% block content %}
+<meta name = "description" content="View Corporate Diversity Reports and EEO-1 Data for Fortune 500 Companies" />
 
 <div class="container-fluid" style="background-color: #153D77; padding-bottom: 20px;">
     <div class='row' style="padding-bottom: 20px;">
