--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="shortcut icon" href="{{ url_for('static', filename='unity.png') }}">
 
+<meta name = "keywords" content="Corporate, Diversity, Data, Reports, EEO-1" />
+<meta name = "description" content="View Corporate Diversity Reports and EEO-1 Data for Fortune 500 Companies" />
+
 <style>
 @import url(http://fonts.googleapis.com/css?family=Oswald);
 body {
@@ -80,7 +83,6 @@ p.card-text{
 
 
 {% block content %}
-<meta name = "description" content="View Corporate Diversity Reports and EEO-1 Data for Fortune 500 Companies" />
 
 <div class="container-fluid" style="background-color: #153D77; padding-bottom: 20px;">
     <div class='row' style="padding-bottom: 20px;">
