--- a/templates/index.html
+++ b/templates/index.html
@@ -208,6 +208,7 @@ p.card-text{
                     However, the companies whose data we've collected have choosen to do so.</h3><br />
                     <h3>To learn more about the different EEO-1 job levels, click <a href="https://www.eeoc.gov/employers/eeo-1-survey/eeo-1-job-classification-guide-2010" target="_blank">here.</a></h3><br />
                     <h3>To learn more about the different EEO-1 gender and race/ethnicity categories, click <a href="https://www.eeoc.gov/employers/eeo-1-survey/eeo-1-instruction-booklet" target="_blank">here.</a></h3><br />
+                    <h3>To see aggregated EEO-1 Data across all U.S. companies and various industries, check out EEO's "EEOC Explore" tool <a href="https://www.eeoc.gov/statistics/employment/jobpatterns/eeo1" target="_blank">here.</a></h3><br />
                 </div>
             </div>
         </div>
